--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "awcodes/overlook": "^2.2",
         "filament/filament": "^3.2",
+        "filament/forms": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1"
