--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "awcodes/overlook": "^2.2",
         "filament/filament": "^3.2",
         "filament/forms": "^3.3",
+        "kreait/firebase-php": "^7.18",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1"
